// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DecisionMaker renders with 'no' as default state for radio buttons 1`] = `
<div id="decisionMakerField"
     role="group"
     aria-labelledby="decisionMakerFieldLabel"
     class="o-forms-field o-forms-field--inline"
     data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main"
          id="decisionMakerFieldLabel"
    >
      Are you a manager with direct reports?
    </span>
  </span>
  <span class="o-forms-input o-forms-input--radio-box o-forms-input--inline">
    <div class="o-forms-input--radio-box__container">
      <label for="decisionMakerYes">
        <input type="radio"
               id="decisionMakerYes"
               name="decisionMaker"
               aria-label="Yes"
               value="yes"
        >
        <span class="o-forms-input__label"
              aria-hidden="true"
        >
          Yes
        </span>
      </label>
      <label for="decisionMakerNo">
        <input type="radio"
               id="decisionMakerNo"
               name="decisionMaker"
               aria-label="No"
               value="no"
               checked
        >
        <span class="o-forms-input__label o-forms-input__label--negative"
              aria-hidden="true"
        >
          No
        </span>
      </label>
    </div>
    <span class="o-forms-input__error">
      Please select an option
    </span>
  </span>
</div>
`;

exports[`DecisionMaker renders with an error 1`] = `
<div id="decisionMakerField"
     role="group"
     aria-labelledby="decisionMakerFieldLabel"
     class="o-forms-field o-forms-field--inline"
     data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main"
          id="decisionMakerFieldLabel"
    >
      Are you a manager with direct reports?
    </span>
  </span>
  <span class="o-forms-input o-forms-input--radio-box o-forms-input--inline o-forms-input--invalid">
    <div class="o-forms-input--radio-box__container">
      <label for="decisionMakerYes">
        <input type="radio"
               id="decisionMakerYes"
               name="decisionMaker"
               aria-label="Yes"
               value="yes"
               checked
        >
        <span class="o-forms-input__label"
              aria-hidden="true"
        >
          Yes
        </span>
      </label>
      <label for="decisionMakerNo">
        <input type="radio"
               id="decisionMakerNo"
               name="decisionMaker"
               aria-label="No"
               value="no"
        >
        <span class="o-forms-input__label o-forms-input__label--negative"
              aria-hidden="true"
        >
          No
        </span>
      </label>
    </div>
    <span class="o-forms-input__error">
      Please select an option
    </span>
  </span>
</div>
`;

exports[`DecisionMaker renders with default props 1`] = `
<div id="decisionMakerField"
     role="group"
     aria-labelledby="decisionMakerFieldLabel"
     class="o-forms-field o-forms-field--inline"
     data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main"
          id="decisionMakerFieldLabel"
    >
      Are you a manager with direct reports?
    </span>
  </span>
  <span class="o-forms-input o-forms-input--radio-box o-forms-input--inline">
    <div class="o-forms-input--radio-box__container">
      <label for="decisionMakerYes">
        <input type="radio"
               id="decisionMakerYes"
               name="decisionMaker"
               aria-label="Yes"
               value="yes"
               checked
        >
        <span class="o-forms-input__label"
              aria-hidden="true"
        >
          Yes
        </span>
      </label>
      <label for="decisionMakerNo">
        <input type="radio"
               id="decisionMakerNo"
               name="decisionMaker"
               aria-label="No"
               value="no"
        >
        <span class="o-forms-input__label o-forms-input__label--negative"
              aria-hidden="true"
        >
          No
        </span>
      </label>
    </div>
    <span class="o-forms-input__error">
      Please select an option
    </span>
  </span>
</div>
`;
